--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "javascript-minesweeper",
   "version": "1.0.0",
-  
+      "type": "module",
+
   "main": "index.js",
   
   "scripts": {
